# AjaxTown_Vulkan

./: CMakeLists.txt  vcpkg.json
assets/model/: Shotgun.mtl  Webley.fbx  webley.glb
assets/shaders/compiled/: Culling.comp.spv  PostProcessing.frag.spv  PostProcessing.vert.spv  Triangle.frag.spv  Triangle.vert.spv  standard.frag.spv  standard.vert.spv  triangle.frag.spv  triangle.vert.spv
assets/shaders/source/: Culling.comp  PostProcessing.frag  PostProcessing.vert  Triangle.frag  Triangle.vert  culling.comp  postProcessing.frag  standard.frag  standard.vert  triangle.frag
assets/textures/astc/: Shotgun_Shotgun_rmao.ktx2  revolver_rmao.ktx2
source/: AssimpSDLIOSystem.h  Buffer.cpp  Buffer.h  BufferManager.cpp  BufferManager.h  CommandBuffer.h  CommandManager.h  CommandPool.cpp  CommandPool.h  ComputePipeline.cpp  ComputePipeline.h  ComputePipelineBuilder.h  Context.cpp  Context.h  Descriptor.cpp  Descriptor.h  Fence.cpp  Fence.h  FileManager.cpp  FileManager.h  FrameSyncManager.h  Framebuffer.cpp  Framebuffer.h  GameTime.cpp  GameTime.h  GraphicsPipeline.cpp  GraphicsPipeline.h  GraphicsPipelineBuilder.h  Headers.h  ImageManager.cpp  ImageManager.h  Maths.cpp  Maths.h  Model.cpp  Model.h  PushConstant.h  Renderer.h  Renderpass.cpp  Renderpass.h  Sampler.cpp  (+15 more)
source/Components/: Camera.h  Transform.h
source/Dependencies/: vma.cpp
